--- a/latex/glossary.tex
+++ b/latex/glossary.tex
@@ -4,6 +4,12 @@
   name=X3D,
   description={whatever x3d is}
 }
+\newglossaryentry{Roundtrip3D}{
+  name=X3D,
+  description={whatever x3d is}
+}
 
 \newacronym{GPU}{GPU}{Graphical Processing Unit}
 \newacronym{SVG}{SVG}{Scalable Vector Graphics}
+\newacronym{R3D}{R3D}{Roundtrip3D}
+\newacronym{SSIML}{SSIML}{Scene Structure and Integration Modelling Language}
