--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,10 +1,10 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-10 14:13:55 +0200 
+%% Created for kietsy at 2015-08-10 14:13:55 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 
@@ -130,3 +130,41 @@
 	Year = {2012},
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2338714.2338721},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2338714.2338721}}
+
+	@article{Jung:2015:SDA:2802768.2802837,
+	 author = {Jung, Bernhard and Lenk, Matthias and Vitzthum, Arnd},
+	 title = {Structured Development of 3D Applications: Round-trip Engineering in Interdisciplinary Teams},
+	 journal = {Comput. Sci.},
+	 issue_date = {August    2015},
+	 volume = {30},
+	 number = {3-4},
+	 month = aug,
+	 year = {2015},
+	 issn = {1865-2034},
+	 pages = {285--301},
+	 numpages = {17},
+	 url = {http://dx.doi.org/10.1007/s00450-014-0258-8},
+	 doi = {10.1007/s00450-014-0258-8},
+	 acmid = {2802837},
+	 publisher = {Springer-Verlag New York, Inc.},
+	 address = {Secaucus, NJ, USA},
+	 keywords = {3D applications, Augmented reality, Model differences, Model driven development, Model merging, Model transformation, Round-trip engineering, Virtual reality},
+	}
+
+	@inproceedings{Lenk:2012:MID:2338714.2338742,
+	 author = {Lenk, Matthias and Vitzthum, Arnd and Jung, Bernhard},
+	 title = {Model-driven Iterative Development of 3D Web-applications Using SSIML, X3D and JavaScript},
+	 booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
+	 series = {Web3D '12},
+	 year = {2012},
+	 isbn = {978-1-4503-1432-9},
+	 location = {Los Angeles, California},
+	 pages = {161--169},
+	 numpages = {9},
+	 url = {http://doi.acm.org/10.1145/2338714.2338742},
+	 doi = {10.1145/2338714.2338742},
+	 acmid = {2338742},
+	 publisher = {ACM},
+	 address = {New York, NY, USA},
+	 keywords = {3D development, JavaScript, X3D, X3Dom, code generation, model merging, reverse engineering, round-trip engineering},
+	}
