--- a/latex/seminararbeit.tex
+++ b/latex/seminararbeit.tex
@@ -42,8 +42,6 @@
 % For bibliography style
 \usepackage[numbers]{natbib}
 % for Latex symbols
-\usepackage{doc}
-% symbols
 \usepackage{ marvosym }
 % tables
 \usepackage{ tabularx }
@@ -195,7 +193,7 @@ Freiberg, den \today \hspace{2cm} \underline{\phantom{Platz für die Unterschrif
 
 % Danken möchte ich allen voran \mydozent \index{Froitzheim} und \mydozentTwo \index{Jasper} für dieses Seminar und all ihre Hilfe. Des Weiteren möchte ich mich bei \citeauthor{SeminarTemplate} für sein sehr gutes Latex-Template \cite{SeminarTemplate} bedanken, welches dieser Arbeit zu Grunde liegt, aber in vielen Bereichen angepasst wurde. Eine weitere sehr große Hilfe war das WikiBook \LaTeX~\cite{WikiLatex}, auch vielen Dank an alle Autoren dieses WikiBooks. \\
 
-% Mein Dank geht auch an die fleißigen Korrekturleser Jana Starke \index{Starke, Jana} und Felix Kästner \index{Kästner, Felix}.
+% Mein Dank geht auch an die fleißigen Korrekturleser Friederike Klos \index{Klos, Friederike} und Felix Kästner \index{Kästner, Felix}.
 
 Thanks!
 
