--- a/latex/seminararbeit.bib
+++ b/latex/seminararbeit.bib
@@ -1,17 +1,47 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for kietsy at 2015-08-10 14:13:55 +0200
+%% Created for kietsy at 2015-08-10 22:11:21 +0200 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{reflow,
+	Date-Added = {2015-08-10 20:11:17 +0000},
+	Date-Modified = {2015-08-10 20:11:21 +0000},
+	Url = {https://developers.google.com/speed/articles/reflow}}
+
+@webpage{koajs,
+	Date-Added = {2015-08-10 20:01:35 +0000},
+	Date-Modified = {2015-08-10 20:01:41 +0000},
+	Url = {http://koajs.com/},
+	Bdsk-Url-1 = {http://koajs.com/}}
+
+@webpage{nodejs,
+	Date-Added = {2015-08-10 19:59:39 +0000},
+	Date-Modified = {2015-08-10 19:59:44 +0000},
+	Url = {https://nodejs.org/},
+	Bdsk-Url-1 = {https://nodejs.org/}}
+
+@webpage{componenteditoreffort,
+	Date-Added = {2015-08-10 19:42:27 +0000},
+	Date-Modified = {2015-08-10 19:42:39 +0000},
+	Url = {https://github.com/x3dom/component-editor/issues/1},
+	Bdsk-Url-1 = {https://github.com/x3dom/component-editor/issues/1}}
+
+@webpage{componenteditor,
+	Date-Added = {2015-08-10 19:42:05 +0000},
+	Date-Modified = {2015-08-10 19:42:16 +0000},
+	Url = {https://github.com/x3dom/component-editor},
+	Bdsk-Url-1 = {https://github.com/x3dom/component-editor}}
 
 @webpage{threejs-format,
 	Date-Added = {2015-08-10 12:13:43 +0000},
 	Date-Modified = {2015-08-10 12:13:55 +0000},
-	Url = {https://github.com/mrdoob/three.js/wiki/JSON-Geometry-format-4}}
+	Url = {https://github.com/mrdoob/three.js/wiki/JSON-Geometry-format-4},
+	Bdsk-Url-1 = {https://github.com/mrdoob/three.js/wiki/JSON-Geometry-format-4}}
 
 @webpage{planesensor,
 	Date-Added = {2015-08-10 11:36:32 +0000},
@@ -131,40 +161,41 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2338714.2338721},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2338714.2338721}}
 
-	@article{Jung:2015:SDA:2802768.2802837,
-	 author = {Jung, Bernhard and Lenk, Matthias and Vitzthum, Arnd},
-	 title = {Structured Development of 3D Applications: Round-trip Engineering in Interdisciplinary Teams},
-	 journal = {Comput. Sci.},
-	 issue_date = {August    2015},
-	 volume = {30},
-	 number = {3-4},
-	 month = aug,
-	 year = {2015},
-	 issn = {1865-2034},
-	 pages = {285--301},
-	 numpages = {17},
-	 url = {http://dx.doi.org/10.1007/s00450-014-0258-8},
-	 doi = {10.1007/s00450-014-0258-8},
-	 acmid = {2802837},
-	 publisher = {Springer-Verlag New York, Inc.},
-	 address = {Secaucus, NJ, USA},
-	 keywords = {3D applications, Augmented reality, Model differences, Model driven development, Model merging, Model transformation, Round-trip engineering, Virtual reality},
-	}
+@article{Jung:2015:SDA:2802768.2802837,
+	Acmid = {2802837},
+	Address = {Secaucus, NJ, USA},
+	Author = {Jung, Bernhard and Lenk, Matthias and Vitzthum, Arnd},
+	Doi = {10.1007/s00450-014-0258-8},
+	Issn = {1865-2034},
+	Issue_Date = {August 2015},
+	Journal = {Comput. Sci.},
+	Keywords = {3D applications, Augmented reality, Model differences, Model driven development, Model merging, Model transformation, Round-trip engineering, Virtual reality},
+	Month = aug,
+	Number = {3-4},
+	Numpages = {17},
+	Pages = {285--301},
+	Publisher = {Springer-Verlag New York, Inc.},
+	Title = {Structured Development of 3D Applications: Round-trip Engineering in Interdisciplinary Teams},
+	Url = {http://dx.doi.org/10.1007/s00450-014-0258-8},
+	Volume = {30},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1007/s00450-014-0258-8}}
 
-	@inproceedings{Lenk:2012:MID:2338714.2338742,
-	 author = {Lenk, Matthias and Vitzthum, Arnd and Jung, Bernhard},
-	 title = {Model-driven Iterative Development of 3D Web-applications Using SSIML, X3D and JavaScript},
-	 booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
-	 series = {Web3D '12},
-	 year = {2012},
-	 isbn = {978-1-4503-1432-9},
-	 location = {Los Angeles, California},
-	 pages = {161--169},
-	 numpages = {9},
-	 url = {http://doi.acm.org/10.1145/2338714.2338742},
-	 doi = {10.1145/2338714.2338742},
-	 acmid = {2338742},
-	 publisher = {ACM},
-	 address = {New York, NY, USA},
-	 keywords = {3D development, JavaScript, X3D, X3Dom, code generation, model merging, reverse engineering, round-trip engineering},
-	}
+@inproceedings{Lenk:2012:MID:2338714.2338742,
+	Acmid = {2338742},
+	Address = {New York, NY, USA},
+	Author = {Lenk, Matthias and Vitzthum, Arnd and Jung, Bernhard},
+	Booktitle = {Proceedings of the 17th International Conference on 3D Web Technology},
+	Doi = {10.1145/2338714.2338742},
+	Isbn = {978-1-4503-1432-9},
+	Keywords = {3D development, JavaScript, X3D, X3Dom, code generation, model merging, reverse engineering, round-trip engineering},
+	Location = {Los Angeles, California},
+	Numpages = {9},
+	Pages = {161--169},
+	Publisher = {ACM},
+	Series = {Web3D '12},
+	Title = {Model-driven Iterative Development of 3D Web-applications Using SSIML, X3D and JavaScript},
+	Url = {http://doi.acm.org/10.1145/2338714.2338742},
+	Year = {2012},
+	Bdsk-Url-1 = {http://doi.acm.org/10.1145/2338714.2338742},
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/2338714.2338742}}
